fix: primary fg having low contrast against bg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,7 +126,7 @@
 	--popover-foreground: #eee; /* gray-12 */
 
 	--primary: #36d07e; /* primary-9 */
-	--primary-foreground: #1a1a1a; /* gray-1 */
+	--primary-foreground: #eee; /* gray-12 */
 
 	--secondary: #2f2f2f; /* gray-4 */
 	--secondary-foreground: #eee; /* gray-12 */
